ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: myingress
  annotations: # можно указать тут настройки самого nginx-а (так бы пршилось писать в конфиге самого nginx)
    nginx.ingress.kubernetes.io/add-base-url: "true"
spec:
  ingressClassName: nginx # указываем, что используем для маршрутизации
  rules:
  - host: demo.test
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: short-app-clusterip
            port: 
              number: 80
